# rust-smartschool

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: recent.rs  upload.rs
src/: client.rs  error.rs  http.rs  lib.rs  mydoc.rs  serde.rs  upload.rs
