[package]
name = "smartschool"
version = "0.1.0"
authors = ["Bas De Bue <bas.de.bue@edpnet.be>"]
categories = ["api-bindings"]
edition = "2018"
keywords = ["api", "smartschool"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/basdebue/rust-smartschool"
description = "Smartschool client library for Rust."

[dependencies]
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"], default-features = false }
futures-preview = { version = "0.3.0-alpha.19" }
regex = "1"
reqwest = { version = "0.10.0-alpha.1", features = ["cookies", "json", "unstable-stream"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tokio = "0.2.0-alpha.6"